2010-09-24  Gary V. Vaughan  <gary@gnu.org>

	maint: let make employ user's `SED' setting.
	* Makefile.am: Replace hard-coded `sed' with `$(SED)' through-
	out.

2010-08-30  Gary V. Vaughan  <gary@gnu.org>

	maint: simplify and improve safety of bootstrap process.
	* Makefile.am (bootstrap_files): List files that need to be
	generated at bootstrap time before `./configure && make' can
	work.  It turns out that this is considerably fewer files than we
	had thought necessary previously.
	(bootstrap-deps-prep): Ensure minimum set of required substitution
	variables are non-empty.
	(bootstrap-deps): Depend on `bootstrap' files.
	* bootstrap (Generate bootstrap dependencies): Now that
	`Makefile.am' is entirely responsible for rebuilding files at
	bootstrap time, we need only specify the new `bootstrap-deps'
	target, and supply values for the substitutions checked by
	`bootstrap-deps-prep'.
	* configure.ac (AC_CONFIG_SRCDIR): `libtoolize.in' is not here yet
	right after running `bootstrap'.  So rely on the presence of
	`libtoolize.m4sh', which is always there.

2010-08-31  Gary V. Vaughan  <gary@gnu.org>

	build: eliminate superfluous temporary files from `Makefile.am'.
	* Makefile.am (CLEANFILES): Remove temporary file entries.
	(libtoolize.in, libltdl/config/ltmain.sh, libltdl/m4/ltversion.m4)
	(tests/defs, tests/testsuite): Factor away temporary files.

	build: eliminate `ltmain.in' and `libtoolize.in' intermediate files.
	* Makefile.am (libltdl/config/ltmain.sh, libtoolize.in): Pipe
	the output of `$(LT_M4SH)' directly into `$(bootstrap_edit)' to
	avoid use of superfluous intermediate file.

	build: don't hardcode repeated long paths in Makefile rules.
	According to the DRY principle, scattering several copies of
	something across a file or project leads to pain.  Let's not
	do that!
	* Makefile.am (Makefile_in, Makefile_inc, defs_in, defs_m4sh),
	(libtoolize_in, ltmain_m4sh, ltversion_in): New variables to
	hold the location of important files and targets.